--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -6,7 +6,6 @@
   align-items: center;
   flex-flow: column;
   grid-area: 1/1/2/2;
-
   
   z-index: 3;
 	position: fixed;
@@ -14,4 +13,24 @@
 	left: 0;
 	width: 20%;
 	height: 100vh;
+  background: $color-ddl;
+  @include font($font-m, bold, normal);
+  
+  
+  .NavBar__links {
+    display: flex; 
+    justify-content: space-evenly; 
+    align-items: center;
+    flex-flow: column;
+  }
+
+  .NavBar__widgets {
+    @include flex(column, space-evenly, center);
+    min-height: 200px;
+
+    .NavBar__widgetsImg {
+      max-width: 90px;
+    }
+  }
+
 }
