--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -75,13 +75,13 @@ ul {
 
 // Visibility
 .hide-for-mobile {
-  @include breakpoint-down ("medium") {
+  @include breakpoint-down (medium) {
     display: none;
   }
 }
 
 .hide-for-desktop {
-  @include breakpoint-up ("large") {
+  @include breakpoint-up (large) {
     display: none;
   }
 }
