--- a/src/components/ItemCount/ItemCount.scss
+++ b/src/components/ItemCount/ItemCount.scss
@@ -1,5 +1,16 @@
 .ItemCountContainer {
-  min-width: 250px;
+  min-width: 280px;
   flex-direction: row;
   align-items: center;
+  color: blue;
+
+  .input {
+    display: inline-block;
+    width: 50px;
+    text-align: center;
+  }
+
+  &__modifier {
+    content: ""; // De relleno
+  }
 }
