--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -7,10 +7,12 @@
 
   &__img {
     height: 200px;
+    width: 200px;
     margin-right: 4rem;
   }
 
   &__div {
-
+    background: $color-salmon-light;
+    padding: 2rem;
   }
 }
