--- a/src/App.scss
+++ b/src/App.scss
@@ -2,11 +2,10 @@
 
 .App {
   min-height: 100vh; 
-  padding-bottom: 10rem;
   display: grid;
   grid-template-columns: 20% 80%;
   grid-template-rows: 1fr;
-  padding: 0 5%;
+  background-color: lightblue;
 
   .container {
     grid-area: 1/2/2/3;
