--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -2,6 +2,17 @@
 
 .ItemDetail {
 
+  &__close {
+    width: 2rem;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+  }
+
   &__img {
     max-width: 100%;
   }
